# uav_autonomous_utils

./: CMakeLists.txt  TECHNICAL_PAPER_SECTION.md  package.xml  test_edge_cases.py  test_state_machine_integration.py  test_vo_no_numba.py  test_vo_node_complete.py  test_vo_node_ros.py  test_vo_performance_standalone.py
artificial_potential_fields/src/: APF.cpp
cbf_local_planner/: CMakeLists.txt  not_package.xml
cbf_local_planner/launch/: cbf_local_planner.launch
cbf_local_planner/msg/: SupportPoint.msg
cbf_local_planner/src/: cbf_path_streamer_node.py  cbf_qp_controller_node.py  cbf_supports_node.py
config/: apf_acc.yaml  apfc_acc.yaml  navsat_transform.yaml  occupancy_map_param.yaml  px4_config.yaml  rast_planning.yaml  unified_navigation_config.yaml
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
docs/: aruco_detection_sliding_window.md  control_modes_explanation.md  pid_conflict_resolution.md  state_machine_and_services_explained.md
launch/: aruco_offset_pose.launch  corrected_env.launch  drone_state_machine.launch  dynamic_aruco_pose.launch  gps_nav_backup.launch  gps_navigation.launch  mavros_apf.launch  mavros_depth.launch  mynode.launch  octomap.launch  performing_task.launch  rtabmap_drone.launch  search_for_object.launch  temp_yaw_control.launch  test_navigation_safe.launch  unified_navigation.launch  visual_servoing_backup.launch  visual_survoing_with_avoidance.launch
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
models/: iris_drone.urdf
models/depth_camera/: depth_camera.sdf
models/dict_aruco_original_id1/: model-1_4.sdf  model.config  model.sdf
msg/: SupportArray.msg
rviz/: rviz.rviz  rviz_original.rviz
scripts/: test_vo_performance.py
src/: aruco_pose_offset_publisher.py  drone_state_machine.py  dynamic pe planner.cpp  empty_2.world  estimation_of_pose.py  goal_to_velocity_pid.py  kino_algorithm.xml  map_to_odom_publisher.py  mavros_depth.launch  mynode.launch  odom_to_tf.py  offboard_node.py  perform_task_node.py  pose.launch  pva_translator.py  search_for_object_node.py  set_param.py  slidingModeController.py  tf_to_pose.py  trajectory_follower_with_hybrid_yaw_control.py
src/control/: dynamics_aware_vo_filter.py  dynamics_aware_vo_filter_optimized.py  enhanced_goal_to_velocity_pid.py  hybrid_yaw_rate_pid.py  navigation_mode_manager.py  test_vo_filter_standalone.py  trajectory_aware_pid_controller.py
src/dict_aruco_original_id1/: model-1_5.sdf
src/extra tools/: OG_cv_testing.py  code.py  testing1.py  visual_survoing_1.py  visual_survoing_3.py
src/final?/: advanced_visual_servoing.py
src/navigation/: apf_3d_node.py
src/state_machine/: enhanced_drone_state_machine.py  perform_task_node.py
src/vision/: aruco_pose_offset_publisher.py  (+1 more)
worlds/: calibration.world  simulation.world
(+47 files in other folders)
