<?xml version="1.0"?>
<package format="2">
  <name>uav_autonomous_utils</name>
  <version>0.1.0</version>
  <description>UAV autonomous navigation utilities with CBF-based local planning</description>
  <maintainer email="hmh94@mail.aub.edu">hasan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>python3-osqp-pip</depend>
  <depend>python3-scipy</depend>

  <export></export>
</package>